--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.17.1",
+    "@emailjs/browser": "^3.11.0",
     "contentful": "^10.4.2",
     "framer-motion": "^10.15.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "sass": "^1.64.2"
   },
   "devDependencies": {
